--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript current day and time</title>
+    <title>JavaScript basic - Exercises, Practice, Solution</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- // problem #2:
+ Write a JavaScript program to print the contents of the current window. -->
+
+    <p></p>
+    <p>Click the button to print the current page.</p>
+    <button onclick="print_current_page()">Print this page</button>
+
+
+    <!-- // Problem #5:
+ Write a JavaScript program to rotate the string 'w3resource' in right direction by periodically removing one letter from the end of the string and attaching it to the front. -->
+    <div onclick="animate_string('target')" <pre id="target">w3resource </pre>
+    </div>
 
     <script src="main.js"></script>
 </body>
+
 </html>
