--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     <div onclick="animate_string('target')" <pre id="target">w3resource </pre>
     </div>
 
+
+
+    <!-- // Problem #10:
+ Write a JavaScript program to calculate multiplication and division of two numbers (input from user). -->
+    <form>
+        1st Number : <input type="text" id="firstNumber" /><br>
+        2nd Number: <input type="text" id="secondNumber" /><br>
+        <input type="button" onClick="multiplyBy()" Value="Multiply" />
+        <input type="button" onClick="divideBy()" Value="Divide" />
+    </form>
+    <p>The Result is : <br>
+        <span id="result"></span>
+    </p>
+
     <script src="main.js"></script>
 </body>
 
